--- a/Segunda entrega/Lenguaje de Marcas/CSS Section Reservas/main.css
+++ b/Segunda entrega/Lenguaje de Marcas/CSS Section Reservas/main.css
@@ -106,10 +106,65 @@ section {
     grid-column: 2 / 3;
 }
 
-
-
-
 footer {
-    width: 100vw;
+    background-color: #648d35;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 20px;
 }
 
+footer img {
+    width: 60px;
+    height: auto;
+    margin-right: 25px;
+    margin-top: 50px;
+}
+
+.footer-contacto,
+.footer-horarios,
+.footer-politicas {
+    flex: 1;
+    padding: 10px;
+}
+
+.footer-h2 {
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.footer-h2::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    margin-top: 5px;
+}
+
+.footer-label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.footer-contacto p,
+.footer-horarios p,
+.footer-politicas ul {
+    margin: 5px 0;
+    font-size: 16px;
+}
+
+.footer-politicas ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-politicas ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
