--- a/Tercera Entrega - Diana/HTML + CSS/dondeEstamos.css
+++ b/Tercera Entrega - Diana/HTML + CSS/dondeEstamos.css
@@ -7,6 +7,7 @@
     background-repeat: repeat;
     background-size: 200px 200px;
     background-color: black;
+    margin-top: -5px;
 }
 
 .aboutUs-content {
