--- a/Tercera Entrega - Diana/HTML + CSS/footer.css
+++ b/Tercera Entrega - Diana/HTML + CSS/footer.css
@@ -5,6 +5,7 @@ footer {
   justify-content: space-between;
   align-items: flex-start;
   padding: 20px;
+  box-sizing: border-box;
 }
 
 footer img {
