--- a/Tercera Entrega - Diana/HTML + CSS/platos.css
+++ b/Tercera Entrega - Diana/HTML + CSS/platos.css
@@ -1,15 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-section {
-    width: 100vw;
-}
-
-footer {
-    width: 100vw;
-}
-
 #nuestrosPlatos {
     background-color: #ffffff;
     background-image: url(./IMG/fondo_patron_gris.png);
@@ -48,6 +36,7 @@ footer {
     background-color: #272b34;
     width: 100%;
     overflow: hidden;
+    border-radius: 15px;
 }
 
 #nuestrosPlatos-div-galery {
@@ -73,6 +62,7 @@ footer {
     transition: transform 0.2s ease-in-out;
     object-fit: cover;
     cursor: pointer;
+    border-radius: 15px;
 }
 
 @keyframes nuestrosPlatos-galery-slider {
