--- a/Tercera Entrega - Diana/HTML + CSS/reserva.css
+++ b/Tercera Entrega - Diana/HTML + CSS/reserva.css
@@ -1,11 +1,3 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-section {
-    width: 100vw;
-}
-
 /* CSS Section Reservas */
 
 #reservas {
@@ -16,6 +8,7 @@ section {
     background-repeat: repeat;
     background-size: 200px 200px;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 #reservas-h2 {
@@ -23,17 +16,6 @@ section {
     font-size: 50px;
     text-decoration: underline white;
 }
-
-/* #reservas-h2::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    bottom: -35px;
-    width: 20%;
-    height: 5px;
-    background-color: white;
-    transform: translateX(-50%)
-} */
 
 #reservas-form {
     display: grid;
@@ -79,6 +61,8 @@ section {
     border-bottom: 3px solid black;
     outline: none;
     width: 100%;
+    height: 40px;
+    border-radius: 12px;
 }
 
 #reservas-time input {
@@ -87,6 +71,8 @@ section {
     border-bottom: 3px solid black;
     outline: none;
     width: 100%;
+    height: 40px;
+    border-radius: 12px;
 }
 
 #reservas-time {
@@ -134,4 +120,5 @@ section {
     outline: none;
     border-bottom: 3px solid black;
     outline: none;
+    border-radius: 12px;
 }
