--- a/Tercera Entrega - Diana/HTML + CSS/main.css
+++ b/Tercera Entrega - Diana/HTML + CSS/main.css
@@ -571,6 +571,78 @@ footer img {
 
 /* SMARTPHONE */
 @media (max-width: 600px) {
+
+        /* Donde estamos RESPONSIVE */
+
+        #aboutUs-content {
+            flex-direction: column;
+            padding-right: 0;
+            width: 80%;
+            padding-block: 0;
+        }
+    
+        #aboutUs-h2 {
+            display: none;
+        }
+    
+        #aboutUs-h2-2 {
+            display: block;
+            border-bottom: 2px solid;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
+        }
+    
+        h2 {
+            font-size: 30px !important;
+        }
+    
+        #aboutUs-paragraph {
+            display: flex;
+            justify-content: center;
+        }
+    
+        #aboutUs-paragraph p {
+            width: 90%;
+        }
+    
+        #aboutUs-paragraph .first {
+            border: none;
+            text-align: center;
+            padding-top: 0;
+            margin-top: 0;
+        }
+    
+        #aboutUs-paragraph .second {
+            display: none;
+        }
+    
+        #aboutUs-text {
+            padding-bottom: 18px;
+        }
+    
+        .main-button.aboutUs {
+            margin-bottom: 15px;
+        }
+    
+        header {
+            background-color: transparent;
+        }
+    
+        header img {
+            background-color: #e0dfdc;
+            padding: 15px;
+            border-radius: 9999px;
+            margin-left: 15px;
+        }
+    
+        header nav {
+            display: none;
+        }
+    
+        #aboutUs-image iframe {
+            height: 75%;
+        }
+
     /* Nuestros platos RESPONSIVE */
 
     #nuestrosPlatos-parr {
@@ -653,13 +725,23 @@ footer img {
         margin-top: 10px;
     }
 
+
+}
+
+
+/* TABLET */
+
+
+@media (max-width: 1024px) and (min-width: 601px) {
     /* Donde estamos RESPONSIVE */
 
     #aboutUs-content {
         flex-direction: column;
         padding-right: 0;
-        width: 80%;
+        width: 70%;
         padding-block: 0;
+        box-sizing: border-box;
+        padding-block: 20px;
     }
 
     #aboutUs-h2 {
@@ -673,38 +755,64 @@ footer img {
         margin-bottom: 10px;
     }
 
-    h2 {
-        font-size: 30px !important;
+    #aboutUs-image{
+        width: 75%;
     }
-
-    #aboutUs-paragraph {
-        display: flex;
-        justify-content: center;
-    }
-
-    #aboutUs-paragraph p {
-        width: 90%;
-    }
-
-    #aboutUs-paragraph .first {
-        border: none;
-        text-align: center;
-        padding-top: 0;
-        margin-top: 0;
-    }
-
-    #aboutUs-paragraph .second {
-        display: none;
-    }
-
-    #aboutUs-text {
-        padding-bottom: 18px;
-    }
-
     .main-button.aboutUs {
         margin-bottom: 15px;
     }
 
+    /* Nuestros Platos RESPONSIVE */
+    #nuestrosPlatos-div-galery-inner{
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(5, 1fr);
+        animation: none;
+        box-sizing: border-box;
+    }
+
+    #nuestrosPlatos-div-galery-inner img{
+        width: 100%;
+        height: 100%;
+    
+    }
+
+    /* Reservas RESPONSIVE */
+
+    #reservas-form {
+        display: flex;
+        flex-direction: column;
+        max-width: 85%;
+    }
+
+    #reservas-date {
+        height: 300px;
+    }
+
+    #reservas-form{
+        align-items: center;
+    }
+    #reservas-date {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    #reservas-button{
+        width: fit-content;
+    }
+
+    /* FOOTER RESPONSIVE */
+    footer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    footer img {
+        grid-column: span 2;
+        margin-top: 10px;
+    }
+
+    /* HEADER RESPONSIVE */
     header {
         background-color: transparent;
     }
@@ -719,8 +827,5 @@ footer img {
     header nav {
         display: none;
     }
-
-    #aboutUs-image iframe {
-        height: 75%;
-    }
 }
+    
